纠正某些错误描述

--- a/项目管理/喵站开发流程.md
+++ b/项目管理/喵站开发流程.md
@@ -10,7 +10,7 @@
 
 4.前端团队开发第一个模块的pc前端项目，后端团队开发第一个模块的后端项目。
 
-&ensp;4.1.如果a团队优先做好自己的项目，b团队就要先停下手头开发工作，然后前端团队、后端团队合作，制定第三个模块优先需求的restful api文档。前端团队、后端团队、产品团队合作选定第三个模块，产品团队收集第三个模块的优先需求。a团队开发第二个模块。
+&ensp;4.1.如果a团队优先做好自己的项目，b团队就要先停下手头开发工作，然后前端团队、后端团队合作，制定第二个模块优先需求的restful api文档。前端团队、后端团队、产品团队合作选定第三个模块，产品团队收集第三个模块的优先需求。a团队开发第二个模块。
 
 &ensp;4.2.若b团队一直没有完成工作，那就一直循环进行4.1，直到b团队完成项目，a团队停下工作联合b团队调试整合后的项目，b团队开发第二个模块，测试团队测试第一个模块。
 
