--- a/产品需求/用户/登录注册需求.md
+++ b/产品需求/用户/登录注册需求.md
@@ -11,7 +11,7 @@
 
 1 注册和登录共享一个界面
 
-2 这个界面大体上分三个功能块，二维码登录、账号/邮箱/手机号登录注册、短信登录注册、邮箱登录注册
+2 这个界面大体上分三个功能块，二维码登录、账号/邮箱/手机号登录注册、短信登录注册
 
 3 二维码登录因为涉及到客户端先不做
 
@@ -33,4 +33,16 @@
 
 #### 细节
 
-1 ……
+1 登录/注册成功后跳转到前一个页面
+
+2 登录失败依据登录的选项提示账号/邮箱/手机号和密码错误
+
+3 注册时验证账号/邮箱/手机号是否已使用，若已使用，要提示用户，且不再允许用户执行登录/注册/发送验证码的操作
+
+4 若验证码错误，应该提示用户，且不再允许用户执行登录/注册的操作
+
+5 同一用户发送验证码需要间隔30秒的刷新时间
+
+6 验证用户为机器人后，需要重新刷新页面才可以执行其他操作
+
+7 登录或注册成功应提示用户是否保存用户名和密码来自动登录，然后执行相关操作
