对个人信息管理的内容进行修改

--- a/产品需求/用户/个人信息管理.md
+++ b/产品需求/用户/个人信息管理.md
@@ -17,7 +17,7 @@
 
 4. 隐私设置子功能块需展示用户的生日、手机号/邮箱账号、修改密码、切换/退出账号、注销账号
 
-5. 用户的昵称、头像、账号在用户注册好后默认随机生成，同时弹窗邀请用户完善个人信息（昵称、头像、性别、账号、生日、邮箱等），用户可以选择暂不填写
+5. 用户的昵称、头像、账号在用户注册好后默认随机生成，同时弹窗邀请用户完善个人信息（昵称、头像、性别、账号、生日、邮箱），用户可以选择暂不填写
 
 
 #### 限制
@@ -38,17 +38,20 @@
 
 1. 昵称在页面展示中超过16个字符后显示为省略号
 
-2. 用户开通会员后在昵称和头像上会有特殊显示
+2. 用户关注分为：全部关注、特别关注、分组关注
 
-3. 用户关注分为：全部关注、特别关注、分组关注
+3. 生日用户可以选择隐藏或不填写
 
-4. 用户可以对自己的作品进行分类处理
+4. 用户手机号修改需向原手机号发送验证码后才可以修改，新手机号也需向手机号发送验证码验证
 
-5. 用户的收藏分为：默认收藏夹、新建收藏夹
+5. 修改密码时需遵守注册时的密码格式规定同时向注册手机号/邮箱发送验证信息【密码格式：最少6位，最多为20位，可用字符包括大小写字母，下划线（），数字；要求必须包含大写字母和小写字母，数字】
 
-6. 生日用户可以选择隐藏或不填写
+6. 用户在注销账号时需弹窗进行提醒同时进行多重验证，例如：手机号验证码验证、邮箱链接确定
 
-7. 用户手机号修改需向原手机号发送验证码后才可以修改，新手机号也需向手机号发送验证码验证
+7. 用户可以看到关注页面、粉丝列表、个人作品、简介编辑、点赞列表、收藏列表、历史记录
 
-8. 修改密码时需遵守注册时的密码格式规定同时向注册手机号/邮箱发送验证信息【密码格式：最少6位，最多为20位，可用字符包括大小写字母，下划线（），数字；要求必须包含大写字母和小写字母，数字】
-9. 用户在注销账号时需弹窗进行提醒同时进行多重验证，例如：手机号验证码验证、邮箱链接确定
+8. 其他用户在在观看页面时能看到关注列表、粉丝列表、个人作品、简介内容
+
+9. 用户可以选择是否开启关注列表和粉丝列表
+
+10. 用户可以对个人单个作品进行设置，即公开可见、不给谁看、只给谁看、仅互关好友可见、尽自己可见
