--- a/产品需求/用户/个人信息管理.md
+++ b/产品需求/用户/个人信息管理.md
@@ -15,7 +15,7 @@
 
 3. 个人页面子功能块需展示用户的关注页面、粉丝列表、个人作品、简介编辑、点赞列表、收藏列表、历史记录
 
-4. 隐私设置子功能块需展示用户的生日、手机号/邮箱账号、修改密码、切换/退出账号、注销账号
+4. 隐私设置子功能块需展示用户的生日、是否在个人简介展示生日、手机号/邮箱账号、是否开启关注列表和粉丝列表、修改密码、切换/退出账号、注销账号
 
 5. 用户的昵称、头像、账号在用户注册好后默认随机生成，同时弹窗邀请用户完善个人信息（昵称、头像、性别、账号、生日、邮箱），用户可以选择暂不填写
 
@@ -44,7 +44,7 @@
 
 4. 用户手机号修改需向原手机号发送验证码后才可以修改，新手机号也需向手机号发送验证码验证
 
-5. 修改密码时需遵守注册时的密码格式规定同时向注册手机号/邮箱发送验证信息【密码格式：最少6位，最多为20位，可用字符包括大小写字母，下划线（），数字；要求必须包含大写字母和小写字母，数字】
+5. 修改密码时需遵守注册时的密码格式规定同时向注册手机号/邮箱发送验证信息【密码格式参考登陆注册】
 
 6. 用户在注销账号时需弹窗进行提醒同时进行多重验证，例如：手机号验证码验证、邮箱链接确定
 
@@ -52,6 +52,3 @@
 
 8. 其他用户在在观看页面时能看到关注列表、粉丝列表、个人作品、简介内容
 
-9. 用户可以选择是否开启关注列表和粉丝列表
-
-10. 用户可以对个人单个作品进行设置，即公开可见、不给谁看、只给谁看、仅互关好友可见、尽自己可见
