最终完善第一阶段用户模块需求文档，为冻结需求做准备

--- a/产品需求/用户/个人信息管理.md
+++ b/产品需求/用户/个人信息管理.md
@@ -25,7 +25,7 @@
 （1）违规内容：涉政信息、色情低俗、侵权盗版、人身攻击、诈骗信息、广告推销、违法违规、垃圾信息
 
 
-1. 用户昵称、账号均最多不能超过64个字符，同时用户昵称、账号均具有唯一性
+1. 用户昵称最多不能超过64个字符，同时用户昵称具有唯一性
 
 2. 用户昵称、头像不得包括违规内容【参考(1)】
 
