--- a/产品需求/用户/登录注册.md
+++ b/产品需求/用户/登录注册.md
@@ -23,7 +23,7 @@
 
 #### 限制
 
-1 账号最少为6位，最多为30位，可用字符包括大小写字母，下划线（_），数字  
+1 账号最少为6位，最多为30位，可用字符包括大小写字母，下划线（_），数字，账号具有唯一性
 
 2 邮箱最少为5位，最多为50位，可用字符包括大小写字母，下划线（_），数字，格式为a@c.q  
 
