--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -1,4 +1,4 @@
-## api/user/login
+# api/user/login
 
 登录，并创建session，cookie
 
@@ -33,7 +33,7 @@
 | 4   | passwd为空 |
 | 5   | 用户不存在或密码错误  |
 
-## api/user/logout
+# api/user/logout
 
 登出，并更新cookie，session失效
 
@@ -41,7 +41,7 @@
 
 返回：无
 
-## api/user/user_status
+# api/user/user_status
 
 获取已登录用户自身的信息
 
