进一步完善用户接口，改进接口文档格式

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -4,7 +4,7 @@
 
 传入：
 
-| Key      | Explain | Type   |
+| 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | username | 用户名 | String |
 | email | 邮箱 | String |
@@ -14,7 +14,7 @@
 
 返回：
 
-| Key      | Explain | Type   |
+| 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | error | 错误代码     | Number |
 
@@ -22,14 +22,14 @@
 
 说明：
 
-字段error（错误代码）
+键error（错误代码）
 
-| Value    | Explain    |
+| 值    | 含义    |
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户已登录       |
 | 2   | username，email和phone都为空 |
-| 3   | username，email和phone中有超过1个非空key |
+| 3   | username，email和phone中有超过1个非空键 |
 | 4   | passwd为空 |
 | 5   | 用户不存在或密码错误  |
 
@@ -41,7 +41,7 @@
 
 返回：无
 
-# api/user/get-user-info
+# api/user/get-own-info
 
 获取已登录用户自身的信息
 
@@ -49,7 +49,7 @@
 
 返回：
 
-| Key    | Explain    | Type   |
+| 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | userid | 用户id       | Number |
 | account   | 用户账户       | String |
@@ -66,27 +66,59 @@
 
 说明：
 
-字段gender（用户性别）：
+键gender（用户性别）：
 
-| Value    | Explain    |
+| 值    | 含义    |
 | ------ | ---------- |
 | m   | 男       | 
 | w   | 女       |
 
-字段level（用户等级）
+键level（用户等级）
 
-| Value    | Explain    |
+| 值    | 含义    |
 | ------ | ---------- |
 | 0     | 什么都不能干的未答题用户 |
 | 1     | 答完题的用户       |
 | 10-14 | 普通管理员        |
 | 15    | 超级管理员\开发者    |
 
-字段error（错误代码）
+键error（错误代码）
 
-| Value    | Explain    |
+| 值    | 含义    |
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户未处于登录状态       | 
 
 
+# api/user/get-user-info
+
+根据id获取其他用户信息
+
+传入：
+
+| 键 | 含义 | 类型   |
+| ----- | ------- | ------ |
+| id    | 用户id    | String |
+
+返回：
+
+| 键 | 含义 | 类型   |
+| ------ | ------- | ------ |
+| account   | 用户账户       | String |
+| name   | 用户昵称    | String |
+| level  | 用户等级    | Number |
+| avatar | 用户头像链接  | String |
+| gender   | 用户性别       | String |
+| level  | 用户等级 | Number |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | id格式不合适       |
