--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -1,6 +1,37 @@
+# api/user/verify-account
+
+验证是否已注册
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| username | 用户名 | String |
+| email | 邮箱 | String |
+| phone | 手机号 | String |
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 用户未注册       |
+| 1   | username，email和phone中有超过1个非空键 |
+| 2   | 用户已注册 |
+
+
 # api/user/login
 
-登录，并创建session，cookie
+用户登录，并创建session，cookie
 
 传入：
 
@@ -10,7 +41,138 @@
 | email | 邮箱 | String |
 | phone | 手机号 | String |
 | passwd   | 密码      | String |
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
 | error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 登陆成功       |
+| 1   | 用户已登录       |
+| 2   | username、email或phone格式错误 |
+| 3   | passwd格式错误 |
+| 4   | username，email和phone中有超过1个非空键 |
+| 5   | passwd不匹配 |
+| 6   | username、email或phone未注册 |
+
+
+# api/user/signup
+
+用户注册
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| username | 用户名 | String |
+| email | 邮箱 | String |
+| phone | 手机号 | String |
+| passwd   | 密码      | String |
+| code   | 验证码     | String |
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 注册成功       |
+| 1   | 用户已登录       |
+| 2   | username、email或phone格式错误、含有敏感字符或已注册 |
+| 3   | passwd格式错误或含有敏感字符 |
+| 4   | username，email和phone中有超过1个非空键 |
+| 5   | code不匹配 |
+| 6   | code已过时 |
+
+
+
+# api/user/request-email-code
+
+请求发送验证邮件
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| email | 邮箱 | String |
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | email格式错误 |
+| 2   | email为空 |
+| 3   | 请求过于频繁 |
+
+
+# api/user/request-sms-code
+
+请求发送短信验证码
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| phone | 手机号 | String |
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | phone是空号或格式错误 |
+| 2   | phone为空 |
+| 3   | 请求过于频繁 |
+
+
+# api/user/login-signup-sms
+
+短信验证码注册或登录，若用户未注册则注册成功后跳转登录；若用户已经注册则登录。创建session，cookie
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| phone | 手机号 | String |
+| smscode   | 短信验证码      | String |
 
 返回：
 
@@ -28,10 +190,12 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户已登录       |
-| 2   | username，email和phone都为空 |
-| 3   | username，email和phone中有超过1个非空键 |
-| 4   | passwd为空 |
-| 5   | 用户不存在或密码错误  |
+| 2   | phone是空号 |
+| 2   | smscode错误 |
+| 3   | phone为空 |
+| 4   | smscode为空 |
+| 5   | smscode已超时 |
+
 
 # api/user/logout
 
@@ -40,6 +204,165 @@
 传入：无
 
 返回：无
+
+
+# api/user/change-passwd
+
+密码重置
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| email | 邮箱 | String |
+| phone | 手机号 | String |
+| passwd   | 密码      | String |
+| smscode   | 短信验证码      | String |
+
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户不存在       |
+| 2   | smscode错误 |
+| 3   | phone为空 |
+| 4   | email为空 |
+| 5   | email或phone有超过一个非空键 |
+| 6   | smscode为空 |
+| 7   | smscode已超时 |
+| 8   | passwd为空 |
+| 8   | passwd格式不对或含有敏感信息 |
+
+
+# api/user/get-passwd
+
+密码找回
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| email | 邮箱 | String |
+| phone | 手机号 | String |
+| smscode   | 短信验证码      | String |
+
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户不存在       |
+| 2   | smscode错误 |
+| 3   | phone为空 |
+| 4   | email为空 |
+| 5   | email或phone有超过一个非空键 |
+| 6   | smscode为空 |
+| 7   | smscode已超时 |
+
+
+# api/user/dropout
+
+删除账号，并更新cookie，session失效
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| email | 邮箱 | String |
+| phone | 手机号 | String |
+| smscode   | 短信验证码      | String |
+
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| 0   | 无错误       |
+| 1   | 用户不存在       |
+| 2   | smscode错误 |
+| 3   | phone为空 |
+| 4   | email为空 |
+| 5   | email或phone有超过一个非空键 |
+| 6   | smscode为空 |
+| 7   | smscode已超时 |
+
+
+# api/user/set-own-info
+
+设置已登录用户自身的信息，其中设置邮箱和手机号需要验证码
+
+传入：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| username   | 用户账户       | String |
+| name   | 用户昵称       | String |
+| phone   | 用户手机号码       | String |
+| gender   | 用户性别       | String |
+| mail   | 用户邮箱       | String |
+| avatar | 用户头像链接     | String |
+| birthday | 用户生日     | String |
+| code | 验证码     | Number |
+| original_code | 原手机验证码     | Number |
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户未处于登录状态       | 
+| 2   | username、name、phone、gender、mail、avatar、birthday都为空       |
+| 3   | phone和email同时不为空       | 
+| 4   | phone和email中有一个为空另一个不为空，但是code或original_code为空 | 
+| 5   | phone和email中有一个为空另一个不为空，但是code或original_code错误 | 
+| 6   | phone和email中有一个为空另一个不为空，但是code或original_code过期 | 
+| 7   | username、name、avatar中有某一个键内容违规或格式错误       |
+| 8   | username、name、avatar中有某一个键内容违规       |
+| 9   | phone或email已注册       |
+| 10  | phone修改次数过多       |
+
 
 # api/user/get-own-info
 
@@ -52,7 +375,7 @@
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | userid | 用户id       | Number |
-| account   | 用户账户       | String |
+| username   | 用户账户       | String |
 | name   | 用户昵称       | String |
 | phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
@@ -60,13 +383,14 @@
 | level  | 用户等级 | Number |
 | avatar | 用户头像链接     | String |
 | birthday | 用户生日     | String |
+| fans | 粉丝列表(粉丝id)     | Object[] |
 | error | 错误代码     | Number |
 
 ---
 
 说明：
 
-键gender（用户性别）：
+键gender（用户性别）
 
 | 值    | 含义    |
 | ------ | ---------- |
@@ -82,6 +406,13 @@
 | 10-14 | 普通管理员        |
 | 15    | 超级管理员\开发者    |
 
+键fans（粉丝列表）
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| group   | 用户分组       | Number |
+| userids | 用户id       | Number[] |
+
 键error（错误代码）
 
 | 值    | 含义    |
@@ -92,7 +423,7 @@
 
 # api/user/get-user-info
 
-根据id获取其他用户信息
+根据id获取其他用户信息，用户等级：0以上
 
 传入：
 
@@ -104,12 +435,13 @@
 
 | 键 | 含义 | 类型   |
 | ------ | ------- | ------ |
-| account   | 用户账户       | String |
+| username   | 用户账户       | String |
 | name   | 用户昵称    | String |
 | level  | 用户等级    | Number |
 | avatar | 用户头像链接  | String |
 | gender   | 用户性别       | String |
 | level  | 用户等级 | Number |
+| fans | 粉丝列表(粉丝id)     | Number[] |
 | error | 错误代码     | Number |
 
 ---
@@ -121,4 +453,127 @@
 | 值    | 含义    |
 | ------ | ---------- |
 | 0   | 无错误       |
-| 1   | id格式不合适       |
+| 1   | id格式不合适或为空       |
+| 2   | id不存在       |
+
+
+# api/user/set-user-homepage-privacy-settings
+
+修改个人信息主页的隐私设置
+
+传入：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| is_display_phone   | 是否显示用户手机号码       | Boolean |
+| is_display_mail   | 是否显示用户邮箱       | Boolean |
+| is_display_birthday | 是否显示用户生日     | Boolean |
+| is_display_fans | 是否显示粉丝列表     | Boolean |
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户未处于登录状态       | 
+
+
+# api/user/get-user-homepage-privacy-settings
+
+获取个人信息主页的隐私设置
+
+传入：无
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| is_display_phone   | 是否显示用户手机号码       | Boolean |
+| is_display_mail   | 是否显示用户邮箱       | Boolean |
+| is_display_birthday | 是否显示用户生日     | Boolean |
+| is_display_fans | 是否显示粉丝列表     | Boolean |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户未处于登录状态       | 
+
+
+# api/user/add-follow
+
+关注用户
+
+传入：无
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| id    | 用户id    | String |
+| group    | 关注分组    | Number |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户已在该组中被关注       | 
+| 2   | 用户不存在       | 
+
+键group（关注分组）：默认加入1组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 特别关注分组       |
+| 1…   | 默认分组       | 
+| 2…   | 其他分组       | 
+
+
+# api/user/cancel-follow
+
+取消关注用户
+
+传入：无
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| id    | 用户id    | String |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户未被关注       | 
+| 2   | 用户不存在       | 
+
+
