纠正用户接口的错误

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -332,7 +332,7 @@
 | phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
-| avatar | 用户头像链接     | String |
+| avatar | 用户头像文件     | Object |
 | birthday | 用户生日     | String |
 | code | 验证码     | Number |
 | original_code | 原手机验证码     | Number |
@@ -359,9 +359,8 @@
 | 5   | phone和email中有一个为空另一个不为空，但是code或original_code错误 | 
 | 6   | phone和email中有一个为空另一个不为空，但是code或original_code过期 | 
 | 7   | username、name、avatar中有某一个键内容违规或格式错误       |
-| 8   | username、name、avatar中有某一个键内容违规       |
-| 9   | phone或email已注册       |
-| 10  | phone修改次数过多       |
+| 8   | username、name、phone或email已注册       |
+| 9   | phone修改次数过多       |
 
 
 # api/user/get-own-info
@@ -381,7 +380,7 @@
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
 | level  | 用户等级 | Number |
-| avatar | 用户头像链接     | String |
+| avatar | 用户头像文件     | Object |
 | birthday | 用户生日     | String |
 | fans | 粉丝列表(粉丝id)     | Object[] |
 | error | 错误代码     | Number |
@@ -438,7 +437,7 @@
 | username   | 用户账户       | String |
 | name   | 用户昵称    | String |
 | level  | 用户等级    | Number |
-| avatar | 用户头像链接  | String |
+| avatar | 用户头像文件     | Object |
 | gender   | 用户性别       | String |
 | level  | 用户等级 | Number |
 | fans | 粉丝列表(粉丝id)     | Number[] |
