完善用户接口文档

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -399,7 +399,6 @@
 键level（用户等级）
 
 | 值    | 含义    |
-| ------ | ---------- |
 | 0     | 什么都不能干的未答题用户 |
 | 1     | 答完题的用户       |
 | 10-14 | 普通管理员        |
@@ -546,7 +545,7 @@
 | 值    | 含义    |
 | ------ | ---------- |
 | 0   | 特别关注分组       |
-| 1…   | 默认分组       | 
+| 1   | 默认分组       | 
 | 2…   | 其他分组       | 
 
 
