纠正粉丝相关错误，添加关注功能

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -382,7 +382,8 @@
 | level  | 用户等级 | Number |
 | avatar | 用户头像文件     | Object |
 | birthday | 用户生日     | String |
-| fans | 粉丝列表(粉丝id)     | Object[] |
+| follows | 关注列表     | Object[] |
+| fans | 粉丝列表(粉丝id)     | Number[] |
 | error | 错误代码     | Number |
 
 ---
@@ -405,7 +406,7 @@
 | 10-14 | 普通管理员        |
 | 15    | 超级管理员\开发者    |
 
-键fans（粉丝列表）
+键follows（粉丝列表）
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
@@ -440,6 +441,7 @@
 | avatar | 用户头像文件     | Object |
 | gender   | 用户性别       | String |
 | level  | 用户等级 | Number |
+| follows | 关注列表     | Object[] |
 | fans | 粉丝列表(粉丝id)     | Number[] |
 | error | 错误代码     | Number |
 
@@ -467,7 +469,7 @@
 | is_display_phone   | 是否显示用户手机号码       | Boolean |
 | is_display_mail   | 是否显示用户邮箱       | Boolean |
 | is_display_birthday | 是否显示用户生日     | Boolean |
-| is_display_fans | 是否显示粉丝列表     | Boolean |
+| is_display_follows_and_fans | 是否显示关注列表和粉丝列表     | Boolean |
 
 返回：
 
