完善部分接口

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -411,6 +411,7 @@
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | group   | 用户分组       | Number |
+| group_name   | 用户分组名称       | String |
 | userids | 用户id       | Number[] |
 
 键error（错误代码）
