更改关注分组部分细节

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -410,7 +410,6 @@
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
-| group   | 用户分组       | Number |
 | group_name   | 用户分组名称       | String |
 | userids | 用户id       | Number[] |
 
@@ -529,7 +528,7 @@
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | id    | 用户id    | String |
-| group    | 关注分组    | Number |
+| group_name    | 关注分组    | Number |
 | error | 错误代码     | Number |
 
 ---
@@ -544,13 +543,13 @@
 | 1   | 用户已在该组中被关注       | 
 | 2   | 用户不存在       | 
 
-键group（关注分组）：默认加入1组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
+键group（关注分组）：默认加入默认分组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
 
 | 值    | 含义    |
 | ------ | ---------- |
-| 0   | 特别关注分组       |
-| 1   | 默认分组       | 
-| 2…   | 其他分组       | 
+| special   | 特别关注分组       |
+| default   | 默认分组       | 
+| 其他值   | 其他分组       | 
 
 
 # api/user/cancel-follow
@@ -578,4 +577,54 @@
 | 1   | 用户未被关注       | 
 | 2   | 用户不存在       | 
 
+
+# api/user/add-follow-group
+
+添加关注群组
+
+传入：无
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| group_name    | 分组名称    | String |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 该组已存在       | 
+
+
+# api/user/delete-follow-group
+
+删除关注群组并删除该组全部被关注者
+
+传入：无
+
+返回：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| group_name    | 分组名称    | String |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 该组不存在       | 
+| 2   | 该组无法删除（因为删除了默认分组或特别关注分组）       | 
 
