添加登出错误返回码

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -205,8 +205,18 @@
 
 传入：无
 
-返回：无
+返回：
 
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | 用户未登录       |
 
 # api/user/change-passwd
 
