--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -69,7 +69,7 @@
 
 # api/user/signup
 
-用户注册
+用户注册，创建cookie
 
 传入：
 
@@ -468,6 +468,8 @@
 | 0   | 无错误       |
 | 1   | id格式不合适或为空       |
 | 2   | id不存在       |
+| 3   | 用户等级太低       | 
+| 4   | 用户未处于登录状态       | 
 
 
 # api/user/set-user-homepage-privacy-settings
@@ -554,6 +556,7 @@
 | 0   | 无错误       |
 | 1   | 用户已在该组中被关注       | 
 | 2   | 用户不存在       | 
+| 3   | 用户未处于登录状态       | 
 
 键group（关注分组）：默认加入默认分组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
 
@@ -588,6 +591,7 @@
 | 0   | 无错误       |
 | 1   | 用户未被关注       | 
 | 2   | 用户不存在       | 
+| 3   | 用户未处于登录状态       | 
 
 
 # api/user/add-follow-group
@@ -613,6 +617,7 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 该组已存在       | 
+| 2   | 用户未处于登录状态       | 
 
 
 # api/user/delete-follow-group
@@ -639,4 +644,5 @@
 | 0   | 无错误       |
 | 1   | 该组不存在       | 
 | 2   | 该组无法删除（因为删除了默认分组或特别关注分组）       | 
+| 3   | 用户未处于登录状态       | 
 
