完善部分关注接口返回值和头像文件参数

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -342,7 +342,7 @@
 | phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
-| avatar | 用户头像文件     | Object |
+| avatar | 用户头像文件     | String |
 | birthday | 用户生日     | String |
 | code | 验证码     | Number |
 | original_code | 原手机验证码     | Number |
@@ -390,7 +390,7 @@
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
 | level  | 用户等级 | Number |
-| avatar | 用户头像文件     | Object |
+| avatar | 用户头像文件     | String |
 | birthday | 用户生日     | String |
 | follows | 关注列表     | Object[] |
 | fans | 粉丝列表(粉丝id)     | Number[] |
@@ -421,7 +421,7 @@
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | group_name   | 用户分组名称       | String |
-| userids | 用户id       | Number[] |
+| user_ids | 用户id       | Number[] |
 
 键error（错误代码）
 
@@ -448,7 +448,7 @@
 | username   | 用户账户       | String |
 | name   | 用户昵称    | String |
 | level  | 用户等级    | Number |
-| avatar | 用户头像文件     | Object |
+| avatar | 用户头像文件     | String |
 | gender   | 用户性别       | String |
 | level  | 用户等级 | Number |
 | follows | 关注列表     | Object[] |
@@ -555,6 +555,7 @@
 | 1   | 用户已在该组中被关注       | 
 | 2   | 用户不存在       | 
 | 3   | 用户未处于登录状态       | 
+| 4   | 该组不存在       | 
 
 键group（关注分组）：默认加入默认分组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
 
