修正部分接口设计错误

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -442,15 +442,16 @@
 | id    | 用户id    | String |
 
 返回：
-
-| 键 | 含义 | 类型   |
-| ------ | ------- | ------ |
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
 | username   | 用户账户       | String |
-| name   | 用户昵称    | String |
-| level  | 用户等级    | Number |
-| avatar | 用户头像文件     | String |
+| name   | 用户昵称       | String |
+| phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
+| mail   | 用户邮箱       | String |
 | level  | 用户等级 | Number |
+| avatar | 用户头像文件     | String |
+| birthday | 用户生日     | String |
 | follows | 关注列表     | Object[] |
 | fans | 粉丝列表(粉丝id)     | Number[] |
 | error | 错误代码     | Number |
@@ -533,13 +534,16 @@
 
 关注用户
 
-传入：无
+传入：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| id    | 用户id    | String |
 
 返回：
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
-| id    | 用户id    | String |
 | group_name    | 关注分组    | Number |
 | error | 错误代码     | Number |
 
@@ -570,13 +574,16 @@
 
 取消关注用户
 
-传入：无
+传入：
+
+| 键    | 含义    | 类型   |
+| ------ | ---------- | ------ |
+| id    | 用户id    | String |
 
 返回：
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
-| id    | 用户id    | String |
 | error | 错误代码     | Number |
 
 ---
