完善关注部分接口设计

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -539,12 +539,12 @@
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | id    | 用户id    | String |
+| group_name    | 关注分组    | Number |
 
 返回：
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
-| group_name    | 关注分组    | Number |
 | error | 错误代码     | Number |
 
 ---
@@ -561,7 +561,7 @@
 | 3   | 用户未处于登录状态       | 
 | 4   | 该组不存在       | 
 
-键group（关注分组）：默认加入默认分组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
+键group_name（关注分组名字）：默认加入默认分组，若加入的用户在其他组中存在，则从其他组删除，再将其加入新组
 
 | 值    | 含义    |
 | ------ | ---------- |
@@ -604,13 +604,15 @@
 
 添加关注群组
 
-传入：无
-
-返回：
+传入：
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | group_name    | 分组名称    | String |
+
+返回：
+
+| 键    | 含义    | 类型   |
 | error | 错误代码     | Number |
 
 ---
@@ -630,13 +632,15 @@
 
 删除关注群组并删除该组全部被关注者
 
-传入：无
-
-返回：
+传入：
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
 | group_name    | 分组名称    | String |
+
+返回：
+
+| 键    | 含义    | 类型   |
 | error | 错误代码     | Number |
 
 ---
