添加get-user-id接口

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -102,7 +102,6 @@
 | 6   | code已过时 |
 
 
-
 # api/user/request-email-code
 
 请求发送验证邮件
@@ -429,6 +428,37 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户未处于登录状态       | 
+
+
+# api/user/get-user-id
+
+根据用户名获取其他用户id，用户等级：0以上
+
+
+传入：
+
+| 键 | 含义 | 类型   |
+| ------ | ---------- | ------ |
+| username   | 用户账户       | String |
+
+返回：
+| 键    | 含义    | 类型   |
+| ----- | ------- | ------ |
+| id    | 用户id    | String |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | username为空       |
+| 2   | username不存在       |
+| 3   | 用户等级太低       | 
+| 4   | 用户未处于登录状态       | 
 
 
 # api/user/get-user-info
