完善隐私设置相关接口

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -530,6 +530,7 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户未处于登录状态       | 
+| 2   | 传入的键都为空键       | 
 
 
 # api/user/get-user-homepage-privacy-settings
