因需求收集环节失误，短信验证码超预算，删掉该部分接口和参数

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -8,7 +8,6 @@
 | -------- | ------- | ------ |
 | username | 用户名 | String |
 | email | 邮箱 | String |
-| phone | 手机号 | String |
 
 返回：
 
@@ -20,14 +19,12 @@
 
 说明：
 
-键phone：格式为区号+11位电话号码（没有前导0）
-
 键error（错误代码）
 
 | 值    | 含义    |
 | ------ | ---------- |
 | 0   | 用户未注册       |
-| 1   | username，email和phone中有超过1个非空键 |
+| 1   | username或email中有超过1个非空键 |
 | 2   | 用户已注册 |
 
 
@@ -41,7 +38,6 @@
 | -------- | ------- | ------ |
 | username | 用户名 | String |
 | email | 邮箱 | String |
-| phone | 手机号 | String |
 | passwd   | 密码      | String |
 
 返回：
@@ -60,9 +56,9 @@
 | ------ | ---------- |
 | 0   | 登陆成功       |
 | 1   | 用户已登录       |
-| 2   | username，email和phone中有超过1个非空键 |
+| 2   | username或email中有超过1个非空键 |
 | 3   | passwd不匹配 |
-| 4   | username、email或phone未注册 |
+| 4   | username或email未注册 |
 
 
 # api/user/signup
@@ -75,7 +71,6 @@
 | -------- | ------- | ------ |
 | username | 用户名 | String |
 | email | 邮箱 | String |
-| phone | 手机号 | String |
 | passwd   | 密码      | String |
 | code   | 验证码     | String |
 
@@ -95,9 +90,9 @@
 | ------ | ---------- |
 | 0   | 注册成功       |
 | 1   | 用户已登录       |
-| 2   | username、email或phone格式错误、含有敏感字符或已注册 |
+| 2   | username或email格式错误、含有敏感字符或已注册 |
 | 3   | passwd格式错误或含有敏感字符 |
-| 4   | username，email和phone中有超过1个非空键 |
+| 4   | username或email有超过1个非空键 |
 | 5   | code不匹配 |
 | 6   | code已过时 |
 
@@ -132,70 +127,6 @@
 | 3   | 请求过于频繁 |
 
 
-# api/user/request-sms-code
-
-请求发送短信验证码
-
-传入：
-
-| 键      | 含义 | 类型   |
-| -------- | ------- | ------ |
-| phone | 手机号 | String |
-
-返回：
-
-| 键      | 含义 | 类型   |
-| -------- | ------- | ------ |
-| error | 错误代码     | Number |
-
----
-
-说明：
-
-键error（错误代码）
-
-| 值    | 含义    |
-| ------ | ---------- |
-| 0   | 无错误       |
-| 1   | phone是空号或格式错误 |
-| 2   | phone为空 |
-| 3   | 请求过于频繁 |
-
-
-# api/user/login-signup-sms
-
-短信验证码注册或登录，若用户未注册则注册成功后跳转登录；若用户已经注册则登录。创建session，cookie
-
-传入：
-
-| 键      | 含义 | 类型   |
-| -------- | ------- | ------ |
-| phone | 手机号 | String |
-| smscode   | 短信验证码      | String |
-
-返回：
-
-| 键      | 含义 | 类型   |
-| -------- | ------- | ------ |
-| error | 错误代码     | Number |
-
----
-
-说明：
-
-键error（错误代码）
-
-| 值    | 含义    |
-| ------ | ---------- |
-| 0   | 无错误       |
-| 1   | 用户已登录       |
-| 2   | phone是空号 |
-| 2   | smscode错误 |
-| 3   | phone为空 |
-| 4   | smscode为空 |
-| 5   | smscode已超时 |
-
-
 # api/user/logout
 
 登出，并更新cookie，session失效
@@ -224,9 +155,8 @@
 | 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | email | 邮箱 | String |
-| phone | 手机号 | String |
 | passwd   | 密码      | String |
-| smscode   | 短信验证码      | String |
+| code   | 验证码      | String |
 
 
 返回：
@@ -245,14 +175,12 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户不存在       |
-| 2   | smscode错误 |
-| 3   | phone为空 |
-| 4   | email为空 |
-| 5   | email或phone有超过一个非空键 |
-| 6   | smscode为空 |
-| 7   | smscode已超时 |
-| 8   | passwd为空 |
-| 8   | passwd格式不对或含有敏感信息 |
+| 2   | code错误 |
+| 3   | email为空 |
+| 4   | email不匹配 |
+| 5   | code已超时 |
+| 6   | passwd为空 |
+| 7   | passwd格式不对或含有敏感信息 |
 
 
 # api/user/get-passwd
@@ -264,8 +192,7 @@
 | 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | email | 邮箱 | String |
-| phone | 手机号 | String |
-| smscode   | 短信验证码      | String |
+| code   | 验证码      | String |
 
 
 返回：
@@ -284,12 +211,10 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户不存在       |
-| 2   | smscode错误 |
-| 3   | phone为空 |
-| 4   | email为空 |
-| 5   | email或phone有超过一个非空键 |
-| 6   | smscode为空 |
-| 7   | smscode已超时 |
+| 2   | code错误 |
+| 3   | email为空 |
+| 4   | email不匹配 |
+| 5   | code已超时 |
 
 
 # api/user/dropout
@@ -301,8 +226,7 @@
 | 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | email | 邮箱 | String |
-| phone | 手机号 | String |
-| smscode   | 短信验证码      | String |
+| code   | 验证码      | String |
 
 
 返回：
@@ -320,17 +244,15 @@
 | 值    | 含义    |
 | 0   | 无错误       |
 | 1   | 用户不存在       |
-| 2   | smscode错误 |
-| 3   | phone为空 |
-| 4   | email为空 |
-| 5   | email或phone有超过一个非空键 |
-| 6   | smscode为空 |
-| 7   | smscode已超时 |
+| 2   | code错误 |
+| 3   | email为空 |
+| 4   | email不匹配 |
+| 5   | code已超时 |
 
 
 # api/user/set-own-info
 
-设置已登录用户自身的信息，其中设置邮箱和手机号需要验证码
+设置已登录用户自身的信息，其中设置邮箱需要验证码
 
 传入：
 
@@ -338,13 +260,12 @@
 | ------ | ---------- | ------ |
 | username   | 用户账户       | String |
 | name   | 用户昵称       | String |
-| phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
 | avatar | 用户头像文件     | String |
 | birthday | 用户生日     | String |
 | code | 验证码     | Number |
-| original_code | 原手机验证码     | Number |
+| original_code | 原邮箱验证码     | Number |
 
 返回：
 
@@ -362,14 +283,13 @@
 | ------ | ---------- |
 | 0   | 无错误       |
 | 1   | 用户未处于登录状态       | 
-| 2   | username、name、phone、gender、mail、avatar、birthday都为空       |
-| 3   | phone和email同时不为空       | 
-| 4   | phone和email中有一个为空另一个不为空，但是code或original_code为空 | 
-| 5   | phone和email中有一个为空另一个不为空，但是code或original_code错误 | 
-| 6   | phone和email中有一个为空另一个不为空，但是code或original_code过期 | 
-| 7   | username、name、avatar中有某一个键内容违规或格式错误       |
-| 8   | username、name、phone或email已注册       |
-| 9   | phone修改次数过多       |
+| 2   | username、name、gender、mail、avatar、birthday都为空       |
+| 3   | mail为空       | 
+| 4   | original_code错误 | 
+| 5   | original_code过期 | 
+| 6   | username、name、avatar中有某一个键内容违规或格式错误       |
+| 7   | username、name或email已注册       |
+| 8   | email修改次数过多       |
 
 
 # api/user/get-own-info
@@ -385,7 +305,6 @@
 | userid | 用户id       | Number |
 | username   | 用户账户       | String |
 | name   | 用户昵称       | String |
-| phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
 | level  | 用户等级 | Number |
@@ -476,7 +395,6 @@
 | ------ | ---------- | ------ |
 | username   | 用户账户       | String |
 | name   | 用户昵称       | String |
-| phone   | 用户手机号码       | String |
 | gender   | 用户性别       | String |
 | mail   | 用户邮箱       | String |
 | level  | 用户等级 | Number |
@@ -509,7 +427,6 @@
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
-| is_display_phone   | 是否显示用户手机号码       | Boolean |
 | is_display_mail   | 是否显示用户邮箱       | Boolean |
 | is_display_birthday | 是否显示用户生日     | Boolean |
 | is_display_follows_and_fans | 是否显示关注列表和粉丝列表     | Boolean |
@@ -543,7 +460,6 @@
 
 | 键    | 含义    | 类型   |
 | ------ | ---------- | ------ |
-| is_display_phone   | 是否显示用户手机号码       | Boolean |
 | is_display_mail   | 是否显示用户邮箱       | Boolean |
 | is_display_birthday | 是否显示用户生日     | Boolean |
 | is_display_fans | 是否显示粉丝列表     | Boolean |
