基本完成后端开发，对接口进行修订

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -70,7 +70,7 @@
 | 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | username | 用户名 | String |
-| email | 邮箱 | String |
+| mail | 邮箱 | String |
 | passwd   | 密码      | String |
 | code   | 验证码     | String |
 
@@ -90,9 +90,9 @@
 | ------ | ---------- |
 | 0   | 注册成功       |
 | 1   | 用户已登录       |
-| 2   | username或email格式错误、含有敏感字符或已注册 |
+| 2   | username或mail格式错误、含有敏感字符或已注册 |
 | 3   | passwd格式错误或含有敏感字符 |
-| 4   | username或email有超过1个非空键 |
+| 4   | username或mail有超过1个非空键 |
 | 5   | code不匹配 |
 | 6   | code已过时 |
 
@@ -100,6 +100,36 @@
 # api/user/request-email-code
 
 请求发送验证邮件
+
+传入：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| email | 邮箱 | String |
+
+返回：
+
+| 键      | 含义 | 类型   |
+| -------- | ------- | ------ |
+| error | 错误代码     | Number |
+
+---
+
+说明：
+
+键error（错误代码）
+
+| 值    | 含义    |
+| ------ | ---------- |
+| 0   | 无错误       |
+| 1   | email格式错误 |
+| 2   | email为空 |
+| 3   | 请求过于频繁 |
+
+
+# api/user/request-original-email-code
+
+请求向原始邮箱发送验证邮件
 
 传入：
 
@@ -146,6 +176,7 @@
 | 0   | 无错误       |
 | 1   | 用户未登录       |
 
+
 # api/user/change-passwd
 
 密码重置
@@ -157,7 +188,6 @@
 | email | 邮箱 | String |
 | passwd   | 密码      | String |
 | code   | 验证码      | String |
-
 
 返回：
 
@@ -194,7 +224,6 @@
 | email | 邮箱 | String |
 | code   | 验证码      | String |
 
-
 返回：
 
 | 键      | 含义 | 类型   |
@@ -228,7 +257,6 @@
 | email | 邮箱 | String |
 | code   | 验证码      | String |
 
-
 返回：
 
 | 键      | 含义 | 类型   |
@@ -243,7 +271,7 @@
 
 | 值    | 含义    |
 | 0   | 无错误       |
-| 1   | 用户不存在       |
+| 1   | 用户未登录       |
 | 2   | code错误 |
 | 3   | email为空 |
 | 4   | email不匹配 |
@@ -261,6 +289,7 @@
 | username   | 用户账户       | String |
 | name   | 用户昵称       | String |
 | gender   | 用户性别       | String |
+| original_mail   | 原用户邮箱       | String |
 | mail   | 用户邮箱       | String |
 | avatar | 用户头像文件     | String |
 | birthday | 用户生日     | String |
@@ -277,6 +306,8 @@
 
 说明：
 
+键avatar：格式为jpg|gif|jpeg|png|gif|bmp|webp|svg|tiff|ico|jfif|tif的一个base64字符串
+
 键error（错误代码）
 
 | 值    | 含义    |
@@ -284,12 +315,16 @@
 | 0   | 无错误       |
 | 1   | 用户未处于登录状态       | 
 | 2   | username、name、gender、mail、avatar、birthday都为空       |
-| 3   | mail为空       | 
-| 4   | original_code错误 | 
-| 5   | original_code过期 | 
-| 6   | username、name、avatar中有某一个键内容违规或格式错误       |
-| 7   | username、name或email已注册       |
-| 8   | email修改次数过多       |
+| 3   | original_mail为空       | 
+| 4   | original_mail不匹配       | 
+| 5   | mail不匹配       | 
+| 6   | original_code错误 | 
+| 7   | original_code过期 | 
+| 8   | code错误 | 
+| 9   | code过期 | 
+| 10   | username、name、avatar中有某一个键内容违规或格式错误       |
+| 11   | username、name或email已注册       |
+| 12   | email修改次数过多       |
 
 
 # api/user/get-own-info
@@ -322,6 +357,7 @@
 
 | 值    | 含义    |
 | ------ | ---------- |
+| e   | 空       | 
 | m   | 男       | 
 | w   | 女       |
 
