修正接口参数password描述

--- a/接口文档/用户.md
+++ b/接口文档/用户.md
@@ -38,7 +38,7 @@
 | -------- | ------- | ------ |
 | username | 用户名 | String |
 | email | 邮箱 | String |
-| passwd   | 密码      | String |
+| password   | 密码      | String |
 
 返回：
 
@@ -57,7 +57,7 @@
 | 0   | 登陆成功       |
 | 1   | 用户已登录       |
 | 2   | username或email中有超过1个非空键 |
-| 3   | passwd不匹配 |
+| 3   | password不匹配 |
 | 4   | username或email未注册 |
 
 
@@ -71,7 +71,7 @@
 | -------- | ------- | ------ |
 | username | 用户名 | String |
 | mail | 邮箱 | String |
-| passwd   | 密码      | String |
+| password   | 密码      | String |
 | code   | 验证码     | String |
 
 返回：
@@ -91,7 +91,7 @@
 | 0   | 注册成功       |
 | 1   | 用户已登录       |
 | 2   | username或mail格式错误、含有敏感字符或已注册 |
-| 3   | passwd格式错误或含有敏感字符 |
+| 3   | password格式错误或含有敏感字符 |
 | 4   | username或mail有超过1个非空键 |
 | 5   | code不匹配 |
 | 6   | code已过时 |
@@ -186,7 +186,7 @@
 | 键      | 含义 | 类型   |
 | -------- | ------- | ------ |
 | email | 邮箱 | String |
-| passwd   | 密码      | String |
+| password   | 密码      | String |
 | code   | 验证码      | String |
 
 返回：
@@ -209,8 +209,8 @@
 | 3   | email为空 |
 | 4   | email不匹配 |
 | 5   | code已超时 |
-| 6   | passwd为空 |
-| 7   | passwd格式不对或含有敏感信息 |
+| 6   | password为空 |
+| 7   | password格式不对或含有敏感信息 |
 
 
 # api/user/get-passwd
