初步完成发布子模块需求文档，添加评论与互动子模块需求文档

--- a/产品需求/视频/发布.md
+++ b/产品需求/视频/发布.md
@@ -9,11 +9,36 @@
 
 #### 行为
 
-1 可以上传视频，并且有上传完成提示
+1 分两个功能块，发布视频和信息填写
+
+2 发布视频子功能块：可以添加视频，并且有上传完成提示
+
+3 信息填写子功能块：可填写封面，标题，分区，标签，简介，可见范围，互动设置
 
 
 #### 限制
 
+1 一次只可上传单个视频
+
+2 封面比例固定为16:9,尺寸最小为640*360，不符合条件不得上传
+
+3 标题最多200个字符，不得包括违规内容【参考用户-个人信息管理-限制(1)】
+
+4 标签最多可添加20个，标签长度最多为30个字符，不得包括违规内容【参考用户-个人信息管理-限制(1)】
+
+5 简介最多5000个字符，不得包括违规内容【参考用户-个人信息管理-限制(1)】
+
 
 #### 细节
+
+1 视频上传后，可更换视频重新上传
+
+2 分区提供数个选项供用户选择
+
+3 标签须在用户输入时，搜索并提供网站已有标签供用户选择
+
+4 可见范围包括：公开可见，仅自己可见，粉丝可见
+
+5 互动设置包括：关闭弹幕，开启高级弹幕，关闭评论，开启精选评论
+
 
