初步完成评论与互动子模块需求文档，添加播放和预览子模块需求文档

--- a/产品需求/视频/评论与互动.md
+++ b/产品需求/视频/评论与互动.md
@@ -13,13 +13,41 @@
 
 2 点赞转发收藏子功能块：包括点赞，转发，收藏
 
-3 弹幕子功能块：包括弹幕开关，发送，列表，屏蔽设定
+3 弹幕子功能块：包括弹幕开关，发送，列表
 
 4 评论子功能块：发送，列表，子列表
+
+5 界面要展示点赞、收藏、转发数量
+
+6 弹幕可被开启关闭，具备弹幕列表、弹幕发送功能
+
+7 弹幕列表中每一条弹幕显示：发布时间、内容、对应视频时间、作者用户id，可按发布时间、对应视频时间排序。弹幕列表中显示弹幕总数
+
+8 评论列表和子列表具备排序功能：可按热度或发布时间排序。评论列表和子列表需要显示用户头像、id，等级、发布时间。评论列表和子列表具备回复、点赞和点踩功能。评论列表和子列表采取瀑布流展示
+
+9 评论列表未展开折叠情况下，最多显示一条子评论
+
+10 子列表最多可有4个级别，实现多重楼中楼效果
 
 
 #### 限制
 
+1 每条弹幕最多100个字符，不得包括违规内容【参考用户-个人信息管理-限制(1)】
+
+2 每条评论和子评论最多1000个字符，不得包括违规内容【参考用户-个人信息管理-限制(1)】
+
 
 #### 细节
+
+1 转发按钮点击后复制分享链接到用户剪贴板
+
+2 弹幕列表默认按对应视频时间排序
+
+3 弹幕列表中每一条弹幕的跳转该用户个人空间
+
+4 评论列表和子列表默认按热度排序、子列表内部可与外部列表排序方法不同
+
+5 点击评论列表和子列表的作者用户id，跳转该用户个人空间
+
+6 浏览评论时，展示评论列表和本层子列表的折叠按钮
 
