改进视频参数档位细节

--- a/产品需求/视频/播放与预览.md
+++ b/产品需求/视频/播放与预览.md
@@ -11,7 +11,7 @@
 
 1 分三个功能块，播放器、播放设置、预览（目前不做）
 
-2 播放器子功能块：视频播放、进度调整、状态控制、分辨率码率帧率切换、音量调节、全屏切换、其他功能
+2 播放器子功能块：视频播放、进度调整、状态控制、视频参数档位切换、音量调节、全屏切换、其他功能
 
 3 状态控制分播放、暂停、恢复播放、从头播放
 
@@ -35,7 +35,7 @@
 
 1 进度调整时要提示用户现在的视频播放时间、跳转目的时刻的视频播放时间、总播放时间
 
-2 分辨率码率帧率切换提供并明确在播放器中提示用户详细信息：360p/24帧/100Kbps（默认）、720p/30帧/2.5Mbps、1080p/30帧/8Mbps、2k/60帧/20Mbps、4k/60帧/30Mbps
+2 视频参数档位切换提供详细信息，并在播放器中明确提示用户各档位详细信息：360p/24帧/100Kbps（默认）、720p/24帧/1.0Mbps、1080p/24帧/2.5Mbps、1080p/30帧/6Mbps、1080p/60帧/10Mbps、2k/30帧/8Mbps、4k/30帧/22Mbps
 
 3 音量可通过↑键↓键调整
 
