改进视频参数档位细节

--- a/产品需求/视频/播放与预览.md
+++ b/产品需求/视频/播放与预览.md
@@ -35,7 +35,7 @@
 
 1 进度调整时要提示用户现在的视频播放时间、跳转目的时刻的视频播放时间、总播放时间
 
-2 视频参数档位切换提供详细信息，并在播放器中明确提示用户各档位详细信息：360p/24帧/100Kbps（默认）、720p/24帧/1.0Mbps、1080p/24帧/2.5Mbps、1080p/30帧/6Mbps、1080p/60帧/10Mbps、2k/30帧/8Mbps、4k/30帧/22Mbps
+2 视频参数档位切换提供详细信息，并在播放器中明确提示用户各档位详细信息：360p/24帧/100Kbps（网速慢时默认）、720p/24帧/1.0Mbps、1080p/24帧/2.5Mbps（网速快时默认）、1080p/30帧/6Mbps、1080p/60帧/10Mbps、2k/30帧/8Mbps、4k/30帧/22Mbps
 
 3 音量可通过↑键↓键调整
 
