--- a/产品需求/视频/播放与预览.md
+++ b/产品需求/视频/播放与预览.md
@@ -26,6 +26,8 @@
 
 #### 限制
 
+1 上传视频的参数档位达不到该分辨率档位的码率，则最高只提供低一档的档位选项；上传视频参数超过该档位码率，则降低到该码率选项。比如上传4k/30帧/7Mbps的视频，只能最高提供1080p/30帧/6Mbps档位选项；上传2k/30帧/9Mbps的视频，只能最高提供2k/30帧/8Mbps档位选项
+
 1 音量可最大增加到200%，界面上限为100%，超出上限只能用↑键调整
 
 2 每个视频页展示20个预览
@@ -35,7 +37,7 @@
 
 1 进度调整时要提示用户现在的视频播放时间、跳转目的时刻的视频播放时间、总播放时间
 
-2 视频参数档位切换提供详细信息，并在播放器中明确提示用户各档位详细信息：360p/24帧/100Kbps（网速慢时默认）、720p/24帧/1.0Mbps、1080p/24帧/2.5Mbps（网速快时默认）、1080p/30帧/6Mbps、1080p/60帧/10Mbps、2k/30帧/8Mbps、4k/30帧/20Mbps
+2 视频参数档位切换提供详细信息，并在播放器中明确提示用户各档位详细信息：360p/24帧/100Kbps（网速慢时默认）、720p/24帧/1.0Mbps、1080p/24帧/2.5Mbps（网速快时默认）、1080p/30帧/6Mbps、2k/30帧/8Mbps、1080p/60帧/10Mbps、4k/30帧/20Mbps
 
 3 音量可通过↑键↓键调整
 
