添加视频参数档位限制

--- a/产品需求/视频/播放与预览.md
+++ b/产品需求/视频/播放与预览.md
@@ -26,11 +26,15 @@
 
 #### 限制
 
-1 上传视频的参数档位达不到该分辨率档位的码率，则最高只提供低一档的档位选项；上传视频参数超过该档位码率，则降低到该码率选项。比如上传4k/30帧/7Mbps的视频，只能最高提供1080p/30帧/6Mbps档位选项；上传2k/30帧/9Mbps的视频，只能最高提供2k/30帧/8Mbps档位选项
+1 上传视频的参数档位达不到该分辨率帧率档位的码率，则最高档位只提供码率换算后的低一档的档位选项。比如上传4k/30帧/7Mbps的视频，只能最高提供360p/24帧/100Kbps档位选项（按720p/24帧计算，等效码率约为7/9/30*24=0.62Mbps;按360p/24帧计算，等效码率约为7/36/30*24=0.16Mbps）。
 
-2 音量可最大增加到200%，界面上限为100%，超出上限只能用↑键调整
+2 上传视频参数刚好超过该分辨率帧率档位的码率，则最高档位降低到该码率选项。上传2k/30帧/9Mbps的视频，只能最高提供2k/30帧/8Mbps档位选项。
 
-3 每个视频页展示20个预览
+3 只有上传了60帧的视频才可以提供1080p/60帧/10Mbps档位。
+
+4 音量可最大增加到200%，界面上限为100%，超出上限只能用↑键调整
+
+5 每个视频页展示20个预览
 
 
 #### 细节
